[package]
name = "nft-runner"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
publish = false

[dependencies]
test-runner = { git = 'https://github.com/paritytech/substrate.git', rev = 'fe663ed0', version = "0.9.0" }

frame-system = { version = "4.0.0-dev", git = 'https://github.com/paritytech/substrate.git', rev = 'fe663ed0' }
frame-support = { git = 'https://github.com/paritytech/substrate.git', rev = 'fe663ed0', version = "4.0.0-dev" }
frame-benchmarking = { git = 'https://github.com/paritytech/substrate.git', rev = 'fe663ed0', version = "4.0.0-dev" }
pallet-balances = { git = 'https://github.com/paritytech/substrate.git', rev = 'fe663ed0', version = "4.0.0-dev" }
pallet-sudo = { git = 'https://github.com/paritytech/substrate.git', rev = 'fe663ed0', version = "4.0.0-dev" }
pallet-transaction-payment = { version = "4.0.0-dev", git = 'https://github.com/paritytech/substrate.git', rev = 'fe663ed0' }

node-runtime = { path = "../runtime" }
node-primitives = { path = "../primitives" }
node-cli = { path = "../cli" }

grandpa = { version = "0.10.0-dev", package = "sc-finality-grandpa", git = 'https://github.com/paritytech/substrate.git', rev = 'fe663ed0' }
sp-consensus-babe = { version = "0.10.0-dev", git = 'https://github.com/paritytech/substrate.git', rev = 'fe663ed0' }
sc-consensus-babe = { version = "0.10.0-dev", git = 'https://github.com/paritytech/substrate.git', rev = 'fe663ed0' }
sc-consensus-manual-seal = { version = "0.10.0-dev", git = 'https://github.com/paritytech/substrate.git', rev = 'fe663ed0' }
sc-service = { version = "0.10.0-dev", default-features = false, git = 'https://github.com/paritytech/substrate.git', rev = 'fe663ed0' }
sc-executor = { version = "0.10.0-dev", git = 'https://github.com/paritytech/substrate.git', rev = 'fe663ed0' }
sc-client-api = { version = "4.0.0-dev", git = 'https://github.com/paritytech/substrate.git', rev = 'fe663ed0' }
sc-network = { version = "0.10.0-dev", git = 'https://github.com/paritytech/substrate.git', rev = 'fe663ed0' }
sc-informant = { version = "0.10.0-dev", git = 'https://github.com/paritytech/substrate.git', rev = 'fe663ed0' }
sc-consensus = { version = "0.10.0-dev", git = 'https://github.com/paritytech/substrate.git', rev = 'fe663ed0' }

sp-core = { git = 'https://github.com/paritytech/substrate.git', rev = 'fe663ed0', version = "4.0.0-dev" }
sp-runtime = { git = 'https://github.com/paritytech/substrate.git', rev = 'fe663ed0', version = "4.0.0-dev" }
sp-keyring = { version = "4.0.0-dev", git = 'https://github.com/paritytech/substrate.git', rev = 'fe663ed0' }
sp-timestamp = { version = "4.0.0-dev", git = 'https://github.com/paritytech/substrate.git', rev = 'fe663ed0' }
sp-api = { version = "4.0.0-dev",  git = 'https://github.com/paritytech/substrate.git', rev = 'fe663ed0' }
sp-inherents = { version = "4.0.0-dev", git = 'https://github.com/paritytech/substrate.git', rev = 'fe663ed0' }
sp-keystore = { version = "0.10.0-dev", git = 'https://github.com/paritytech/substrate.git', rev = 'fe663ed0' }

log = "0.4.14"

# pallets dependencies
orml-currencies = { path = "../../pallets/orml-currencies" }
orml-tokens = { path = "../../pallets/orml-tokens" }
orml-traits = { path = "../../pallets/orml-traits" }
orml-nft = { path = "../../pallets/orml-nft" }
nftmart-traits = { path = "../../pallets/nftmart-traits" }
nftmart-nft = { path = "../../pallets/nftmart-nft" }
nftmart-order = { path = "../../pallets/nftmart-order" }
nftmart-config = { path = "../../pallets/nftmart-config" }
